# obsbot4linux

./: .gitignore  README.md  obsbot4linux
docs/: DESIGN.md  INSTALL.md
docs/design/: OBSBOT Command Center.dc.html  README.md
docs/dev/: CODE_REVIEW.md  GUI_POC_REPORT.md  OBSBOT_CLAUDE.md  RELEASING.md  SDK_PROBE_REPORT.md
gui/: Makefile  README.md  main.cpp  poll.hpp  poll_logic_test.cpp
qt/: CMakeLists.txt  README.md
qt/packaging/: README.md  build-appimage.sh  make_icon.py  obsbot4linux.desktop
qt/qml/: ActionButton.qml  ControlPage.qml  GlassPanel.qml  ImagePage.qml  KeyValue.qml  LogPage.qml  LogView.qml  Main.qml  NavRail.qml  PresetsPage.qml  PtzPad.qml  RingGlyph.qml  SectionLabel.qml  Segmented.qml  SettingsPage.qml  StatusPill.qml  Stepper.qml  Theme.qml  ToggleChip.qml  TrackingPage.qml  Viewfinder.qml
qt/src/: CameraController.cpp  CameraController.h  CameraWorker.cpp  CameraWorker.h  JpegDht.h  PreviewEngine.cpp  PreviewEngine.h  PreviewFormats.h  Settings.cpp  Settings.h  main.cpp
qt/tests/: settings_roundtrip_test.cpp
sdk-probe/: CMakeLists.txt  Makefile  README.md  main.cpp
